--- a/estate/views/estate_upkeep.xml
+++ b/estate/views/estate_upkeep.xml
@@ -68,8 +68,19 @@
                     <filter name="filter_year" icon="terp-go-year" string="This Year"
                             domain="[('upkeep_date','&lt;=',(context_today()+relativedelta(day=31, month=12)).strftime('%%Y-%%m-%%d')), ('upkeep_date','&gt;=',(context_today()-relativedelta(day=1, month=1)).strftime('%%Y-%%m-%%d'))]"/>
                     <group string="Group By">
+                        <filter name="by_company" string="Company"
+                                context="{'group_by': 'company_id'}"/>
+                        <filter name="by_estate" string="Estate"
+                                context="{'group_by': 'estate_id'}"/>
                         <filter name="by_division" string="Division"
                                 context="{'group_by': 'division_id'}"/>
+                        <separator/>
+                        <filter name="by_activity" string="Activity"
+                                context="{'group_by': 'activity_id'}"/>
+                        <separator/>
+                        <filter name="by_date" string="Month"
+                                context="{'group_by': 'upkeep_date'}"/>
+                        <separator/>
                         <filter name="by_team" string="Team"
                                 context="{'group_by': 'upkeep_team_id'}"/>
                         <!-- Hold cross team implementation
@@ -78,10 +89,6 @@
                         -->
                         <filter name="by_employee" string="Employee"
                                 context="{'group_by': 'employee_id'}"/>
-                        <filter name="by_date" string="Month"
-                                context="{'group_by': 'upkeep_date'}"/>
-                        <filter name="by_activity" string="Activity"
-                                context="{'group_by': 'activity_id'}"/>
                     </group>
                 </search>
             </field>
@@ -126,10 +133,18 @@
                     <filter icon="terp-go-month" string="This Month"
                             domain="[('date','&lt;=',(context_today()+relativedelta(day=31)).strftime('%%Y-%%m-%%d')), ('date','&gt;=',(context_today()-relativedelta(day=1)).strftime('%%Y-%%m-%%d'))]"/>
                     <group string="Group By">
-                        <filter name="by_team" string="Team"
-                                context="{'group_by': 'team_id'}"/>
+                        <filter name="by_company" string="Company"
+                                context="{'group_by': 'company_id'}"/>
+                        <filter name="by_estate" string="Estate"
+                                context="{'group_by': 'estate_id'}"/>
+                        <filter name="by_division" string="Division"
+                                context="{'group_by': 'division_id'}"/>
+                        <separator/>
                         <filter name="by_date" string="Date"
                                 context="{'group_by': 'date'}"/>
+                        <separator/>
+                        <filter name="by_team" string="Team"
+                                context="{'group_by': 'team_id'}"/>
                     </group>
                 </search>
             </field>
@@ -142,6 +157,7 @@
             <field name="arch" type="xml">
                 <tree colors="red:state in ('draft','confirmed')">
                     <field name="date"/>
+                    <field name="company_id"/>
                     <field name="estate_id"/>
                     <field name="division_id"/>
                     <field name="team_id"/>
@@ -185,6 +201,8 @@
                                 <field name="max_day" invisible="True"/>
                             </group>
                             <group name="division_information">
+                                <field name="company_id" options="{'no_create_edit': True}"
+                                       attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                 <field name="division_id" options="{'no_create_edit': True}"
                                         attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                 <field name="estate_id" options="{'no_create_edit': True}"
@@ -568,12 +586,21 @@
                             domain="[('upkeep_date','&lt;=',(context_today()+relativedelta(day=31, month=12)).strftime('%%Y-%%m-%%d')), ('upkeep_date','&gt;=',(context_today()-relativedelta(day=1, month=1)).strftime('%%Y-%%m-%%d'))]"/>
 
                     <group string="Group By">
+                        <filter name="by_company" string="Company"
+                                context="{'group_by': 'company_id'}"/>
+                        <filter name="by_estate" string="Estate"
+                                context="{'group_by': 'estate_id'}"/>
+                        <filter name="by_division" string="Division"
+                                context="{'group_by': 'division_id'}"/>
+                        <separator/>
                         <filter name="by_activity" string="Activity"
                                 context="{'group_by': 'activity_id'}"/>
-                        <filter name="by_product" string="Material"
-                                context="{'group_by': 'product_id'}"/>
+                        <separator/>
                         <filter name="by_date" string="Date"
                                 context="{'group_by': 'upkeep_date'}"/>
+                        <separator/>
+                        <filter name="by_product" string="Material"
+                                context="{'group_by': 'product_id'}"/>
                     </group>
                 </search>
             </field>
@@ -607,6 +634,7 @@
                             <group name="activity">
                                 <field name="activity_id" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                 <field name="activity_uom_id"/>
+                                <field name="location_id" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                 <field name="activity_unit_amount"/>
                                 <field name="ratio_product_activity"/>
                             </group>
@@ -709,6 +737,7 @@
                         <field name="division_id" attrs="{'invisible': [('type', '!=', 'division')], 'required': [('type', '=', 'division')]}"/>
                         -->
                         <field name="type" invisible="True"/>
+                        <field name="company_id"/>
                         <field name="estate_id" required="True"/>
                         <field name="division_id" required="True"/>
 
