[ADD] estate: single team multi upkeep (contract and cross team)
* Use sequence for upkeep name.
* Fix access control list for estate config.
* Create autoreset sequence module.
* Backdated upkeep use blank number if exceed autoreset period.

--- a/estate/views/estate_upkeep.xml
+++ b/estate/views/estate_upkeep.xml
@@ -156,6 +156,7 @@
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
                 <tree colors="red:state in ('draft','confirmed')">
+                    <field name="name"/>
                     <field name="date"/>
                     <field name="company_id"/>
                     <field name="estate_id"/>
