--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -6,10 +6,10 @@
              <field name="inherit_id" ref="purchase_request.view_purchase_request_form"/>
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='company_id']" position="after">
-                          <field name="type_functional" string="Unit Functional" required="1"/>
-                          <field name="department_id" string="Department" required="1" options="{'no_create_edit': True}"/>
-                          <field name="employee_id" string="Employee" invisible="1" required="0" options="{'no_create_edit': True}"/>
-                          <field name="type_location" string="Location"/>
+                      <field name="type_location" string="Location"/>
+                      <field name="type_functional" string="Unit Functional" required="1"/>
+                      <field name="department_id" string="Department" required="1" options="{'no_create_edit': True}"/>
+                      <field name="employee_id" string="Employee" invisible="1" required="0" options="{'no_create_edit': True}"/>
                  </xpath>
              </field>
          </record>
@@ -21,7 +21,7 @@
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='assigned_to']" position="after">
                           <field name="type_product" string="Product Type"/>
-                          <field name="type_purchase" string="Purchase Type"/>
+                          <field name="type_purchase" string="Purchase Type" options="{'no_create_edit': True}"/>
                  </xpath>
              </field>
          </record>
@@ -56,14 +56,11 @@
              <field name="inherit_id" ref="purchase_request.view_purchase_request_form"/>
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='line_ids']//tree//field[@name='analytic_account_id']" position="before">
-                          <field name="price_per_product" invisible="0" string="Est Price Product"/>
-                          <field name="total_price" invisible="0" string="Est Total Price"/>
+                          <field name="price_per_product" invisible="0" string="Est Price"/>
+                          <field name="total_price" invisible="0" string="Total Price"/>
                  </xpath>
                  <xpath expr="//field[@name='line_ids']//tree//field[@name='analytic_account_id']" position="after">
                           <field name="budget_available" string="Budget Available"/>
-                 </xpath>
-                 <xpath expr="//field[@name='line_ids']//tree//field[@name='product_id']" position="after">
-                          <field name="origin" string="Ref No"/>
                  </xpath>
              </field>
          </record>
@@ -75,8 +72,8 @@
              <field name="inherit_id" ref="purchase_request.view_purchase_request_form"/>
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='line_ids']//form//group[@name='group6']//div" position="after">
-                          <field name="price_per_product" string="Est Price Product"/>
-                          <field name="total_price" string="Est Total Price"/>
+                          <field name="price_per_product" string="Est Price "/>
+                          <field name="total_price" string="Total Price"/>
                  </xpath>
              </field>
          </record>
@@ -92,16 +89,6 @@
              </field>
          </record>
 
-        <record model="ir.ui.view" id="inherit_purchase_request_line_origin3">
-             <field name="name">Inherit purchase request</field>
-             <field name="model">purchase.request</field>
-             <field name="inherit_id" ref="purchase_request.view_purchase_request_form"/>
-             <field name="arch" type="xml">
-                 <xpath expr="//field[@name='line_ids']//form//field[@name='product_id']" position="after">
-                          <field name="origin" string="Ref No"/>
-                 </xpath>
-             </field>
-         </record>
 
         <record model="ir.ui.view" id="inherit_purchase_request_line_origin7">
              <field name="name">Inherit purchase request</field>
