--- a/estate/views/estate_hr_view.xml
+++ b/estate/views/estate_hr_view.xml
@@ -29,6 +29,10 @@
                         </group>
                         <field name="member_ids"/>
                     </sheet>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                    </div>
                 </form>
             </field>
         </record>
@@ -117,6 +121,10 @@
                     </group>
                     <separator string="Additional Information"/>
                     <field name="comment"/>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                    </div>
                 </form>
             </field>
         </record>
