--- a/purchase_indonesia/views/quotation_comparison.xml
+++ b/purchase_indonesia/views/quotation_comparison.xml
@@ -48,7 +48,7 @@
                                 </group>
                             </group>
                             <separator string="Quotation Comparison"/>
-                            <field name="quotation_comparison_line_ids" track_visibility="onchange"
+                            <field name="v_quotation_comparison_line_ids" track_visibility="onchange"
                                                    attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}"
                                                 context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line',
                                                        }"/>
@@ -58,30 +58,44 @@
         </record>
 
 
+         <record model="ir.ui.view" id="view_quotation_comparison_line">
+            <field name="name">Quotation Comparison Line</field>
+            <field name="model">quotation.comparison.form.line</field>
+            <field name="arch" type="xml">
+                <tree string="Quotation Comparison Line Tree" editable='bottom' delete="true">
+                    <field name="id"  invisible="1" readonly="1"/>
+                    <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
+                    <field name="company_id" string="Company" invisible="1"/>
+                    <field name="product_id" string="Product"  options="{'no_create_edit': True}"/>
+                    <field name="rownum" string="Row" invisible="1"/>
+                    <field name="cheapest" string="Row" invisible="1"/>
+                    <field name="product_uom" string="UOM" options="{'no_create_edit': True}"/>
+                    <field name="partner_id" string="Vendor" options="{'no_create_edit': True}"/>
+                    <field name="price_unit" string="Price"/>
+                    <field name="price_tax" string="Tax Price"/>
+                    <field name="payment_term_id" string="Payment Term" options="{'no_create_edit': True}" />
+                    <field name="date_planned" string="Delivery" />
+                    <field name="incoterm_id" string="FRANCO" options="{'no_create_edit': True}"/>
+                </tree>
+            </field>
+        </record>
+
         <record model="ir.ui.view" id="view_tree_quotation_comparison_line">
             <field name="name">Quotation Comparison Line</field>
             <field name="model">v.quotation.comparison.form.line</field>
             <field name="arch" type="xml">
-                <tree string="Quotation Comparison Line Tree" editable='bottom' delete="true">
+                <tree string="Quotation Comparison Line Tree" colors="red:isheader==5; blue:isheader==6,; blue:isheader==7; blue:isheader==8;" create="false" editable='bottom' delete="true">
                     <field name="id"  invisible="1" readonly="1"/>
-                    <field name="requisition_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
-                    <!--<field name="company_id" string="Company" invisible="1"/>-->
+                    <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
+                    <field name="isheader" invisible="1"/>
                     <field name="product_id" string="Product"  options="{'no_create_edit': True}"/>
-                    <!--<field name="rownum" string="Row" invisible="1"/>-->
-                    <!--<field name="cheapest" string="Row" invisible="1"/>-->
-                    <field name="product_qty" string="Qty" />
+                    <field name="grand_total_label" string="Qty" />
                     <field name="product_uom" string="UOM" options="{'no_create_edit': True}"/>
-                    <!--<field name="partner_id" string="Vendor" options="{'no_create_edit': True}"/>-->
-                    <!--<field name="price_unit" string="Price"/>-->
-                    <!--<field name="price_tax" string="Tax Price"/>-->
                     <field name="vendor1" string="Vendor 1"/>
                     <field name="vendor2" string="Vendor 2"/>
                     <field name="vendor3" string="Vendor 3"/>
                     <field name="vendor4" string="Vendor 4"/>
                     <field name="vendor5" string="Vendor 5"/>
-                    <!--<field name="payment_term_id" string="Payment Term" options="{'no_create_edit': True}" />-->
-                    <!--<field name="date_planned" string="Delivery" />-->
-                    <!--<field name="incoterm_id" string="FRANCO" options="{'no_create_edit': True}"/>-->
                 </tree>
             </field>
         </record>
