[FIX] estate: single activity multi satuan waktu dan produksi
* Remove upkeep activity -> contract.
* Add contract flag at attedancance code.
* Compute and store labour's activity contract based on attendance code.
* Compute wage for contract based on standard price if attendance is contract.
* Support non estate block for location.

--- a/estate/views/estate_hr_view.xml
+++ b/estate/views/estate_hr_view.xml
@@ -76,9 +76,31 @@
                 <tree>
                     <field name="name"/>
                     <field name="code"/>
+                    <field name="contract" string="Ctr."/>
                     <field name="unit_amount"/>
                     <field name="qty_ratio"/>
                 </tree>
+            </field>
+        </record>
+
+        <record id="attendance_code_view_form" model="ir.ui.view">
+            <field name="name">Attendance Code Form</field>
+            <field name="model">estate.hr.attendance</field>
+            <field name="priority" eval="2"/>
+            <field name="arch" type="xml">
+                <form>
+                    <group>
+                        <group id="att_code" name="Attendance">
+                            <field name="name"/>
+                            <field name="code"/>
+                            <field name="contract"/>
+                        </group>
+                        <group id="att_hour" name="Worked Hours">
+                            <field name="qty_ratio" attrs="{'invisible': [('contract', '=', True)]}"/>
+                            <field name="unit_amount" attrs="{'invisible': [('contract', '=', True)]}"/>
+                        </group>
+                    </group>
+                </form>
             </field>
         </record>
 
