[ADD] hr_indonesia: auto generate employee id number
* Use Odoo sequence.
* Support custom prefix (add with_context).
* Required different sequence record per company per estate (KHL)

--- a/hr_indonesia/views/hr_indonesia_view.xml
+++ b/hr_indonesia/views/hr_indonesia_view.xml
@@ -7,6 +7,12 @@
             <field name="model">hr.employee</field>
             <field name="inherit_id" ref="hr.view_employee_form"/>
             <field name="arch" type="xml">
+                <xpath expr="//sheet" position="before">
+                    <header>
+                        <button class="oe_highlight" name="button_generate_nik" string="Generate NIK"
+                                type="object" groups="base.group_hr_user"/>
+                    </header>
+                </xpath>
                 <xpath expr="//notebook" position="inside">
                     <page string="HR Indonesia" groups="base.group_hr_user">
                         <group>
