add config for report quotation comparison,and template report
[ADD] purchase_indonesia : add template report Quotation comparison form

[add] purchase_indonesia : add template design report QCF

init report QCF
outstanding : detail labeling

[FIX] purchase_indonesia : Bug cancelled multi po multi product

[FIX] purchase_indonesia : fix bug calculate qty_ourstanding cannot show in purchase tender

[ADD] purchase_indonesia : add config report for PP,PR,PO,GRN, and template report

[FIX] purchase_indonesia : fix namming file report purchase

init report purchase request
outstanding : detail labeling, kolom no referensi

[ADD] purchase_request : add workflow in purchase request

[ADD] purchase_indonesia : override method report purchase quotation

init report purchase order
outstanding : detail labeling, objek approver

rename css

init report purchase order
outstanding : penjelasan field, objek approver

[ADD] puchase_indonesia : add sum total estimated price in purchase request

init report quotation
outstanding : format tanggal, kolom diskon

[FIX] purchase_indonesia : typo in purchase requisition

add total

[ADD] purchase_indonesia : feature report quotation_comparison form

1.ADD label : subtotal, tax, grand total, franco, TOP,delivery in QCF report
2.ADD Coloumn Remarks in QCF report
3.ADD Coloumn Vendor Name in QCF report
4.ADD Budget Availabilty in Purchase request report
5.ADD button print for report , QCK, Quotation, PO, PP, GRN

--- a/purchase_indonesia/views/inherit_purchase_tender.xml
+++ b/purchase_indonesia/views/inherit_purchase_tender.xml
@@ -36,8 +36,19 @@
                            <field name="qty_received" class="oe_inline" invisible="0"
                                readonly="1"/>
                            <field name="qty_outstanding" class="oe_inline" invisible="0"
-                               readonly="1"/>
+                               readonly="0"/>
                  </xpath>
+                 <xpath expr="//tree/field[@name='name']" position="replace">
+                        <field name="name" invisible="1" string="Reference"/>
+                 </xpath>
+                 <xpath expr="//tree/field[@name='name']" position="after">
+                         <field name="complete_name" invisible="0"
+                               string="Reference"/>
+                         <field name="po_no" invisible="1"
+                               readonly="1"/>
+                         <field name="hide" invisible="1"/>
+                 </xpath>
+
              </field>
          </record>
 
