--- a/purchase_indonesia/views/inherit_stock_picking.xml
+++ b/purchase_indonesia/views/inherit_stock_picking.xml
@@ -22,11 +22,15 @@
                  <xpath expr="//field[@name='origin']" position="after">
                      <field name="purchase_id" string="Ref PO"/>
                      <field name="pr_source" string="REF PP NO" attrs="{'readonly': [('state', '=', 'done')]}"/>
+                     <field name="delivery_number" string="DO Reference" attrs="{'readonly': [('state', '=', 'done')]}"/>
                  </xpath>
                  <xpath expr="//button[@name='show_details']" position="before">
                      <button name="split_quantities" class="oe_link"  icon="fa-list" string="Split" type="object"/>
                      <button name="do_force_donce"
                       class="oe_link"  icon="fa-scissors" string="Force Done" type="object"/>
+                 </xpath>
+                 <xpath expr="//button[@name='do_new_transfer']" position="after">
+                     <button name="print_grn" string="Print GRN/SRN" type="object" states="assigned" groups="base.group_user"/>
                  </xpath>
              </field>
          </record>
