--- a/purchase_indonesia/views/procur_return_view.xml
+++ b/purchase_indonesia/views/procur_return_view.xml
@@ -1,12 +1,12 @@
 <openerp>
     <data>
-        <record model="ir.ui.view" id="view_procur_good_request_tree">
-            <field name="name">Procur Good Request</field>
-            <field name="model">procur.good.request</field>
+        <record model="ir.ui.view" id="view_procur_goods_return_tree">
+            <field name="name">Procur Good Return</field>
+            <field name="model">procur.good.return</field>
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
                 <tree>
-                    <field name="date_request" string="Date"/>
+                    <field name="date_return" string="Date"/>
                     <field name="company_id" string="Company"/>
                     <field name="division_id" string="Division"/>
                     <field name="state" string="State"/>
@@ -15,25 +15,21 @@
         </record>
 
         <!-- View Form: Path -->
-        <record id="view_procur_good_request_form" model="ir.ui.view">
-            <field name="name">Procur Good Request</field>
-            <field name="model">procur.good.request</field>
+        <record id="view_procur_goods_return_form" model="ir.ui.view">
+            <field name="name">Procur Good Return</field>
+            <field name="model">procur.good.return</field>
             <field name="priority">1</field>
             <field name="arch" type="xml">
                 <form>
                      <header coolspan="10">
-                            <button name="button_send_request" states="draft" string="Send Good Request" class="oe_highlight" />
-                            <button name="button_confirm_request" states="confirm" string="Confirm" class="oe_highlight" groups="purchase_request.group_purchase_request_manager"/>
-                            <button name="%(action_good_request_reject)d" states="confirm" string="Reject Good Request" type="action" groups="purchase_request.group_purchase_request_manager"/>
-                            <button name="button_cancel" states="draft" string="Cancel"/>
                             <field name="state" widget="statusbar" statusbar_visible="draft,confirm,done"/>
                      </header>
                     <sheet>
                         <div class="oe_title" colors="blue">
                              <h1>
-                                 <label string="Procurement Good Request "
+                                 <label string="Goods Return "
                                        attrs="{'invisible': [('state','not in',('draft','sent','bid'))]}"/>
-                                 <label string="Procurement Good Request "
+                                 <label string="Goods Return "
                                        attrs="{'invisible': [('state','in',('draft','sent','bid'))]}"/>
                                  <field name="complete_name" class="oe_inline" readonly="1" />
                              </h1>
@@ -44,13 +40,11 @@
                                             attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}"/>
                                      <field name="division_id" string="Division" options="{'no_create_edit': True}"
                                             attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}"/>
-                                     <field name="department_id" string="Department" options="{'no_create_edit': True}"
-                                           attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}"/>
                                      <field name="requester_id" string="Requester" options="{'no_create_edit': True}"
                                            attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}"/>
                                 </group>
                                 <group>
-                                     <field name="date_request" string="Date"
+                                     <field name="date_return" string="Date"
                                            attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}" required="True"/>
                                     <field name="picking_type_id" string="Picking Type" options="{'no_create_edit': True}"
                                            attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}"/>
@@ -62,11 +56,11 @@
 
                             <group>
                                 <notebook>
-                                     <page string="Detail Request">
+                                     <page string="Detail Goods Return">
                                         <tree>
-                                            <field name="procur_request_line_ids" track_visibility="onchange"
+                                            <field name="procurement_return_line_ids" track_visibility="onchange"
                                                    attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}"
-                                                context="{'tree_view_ref' : 'purchase_indonesia.view_tree_procur_good_request_line',
+                                                context="{'tree_view_ref' : 'purchase_indonesia.view_tree_procur_good_return_line',
                                                        }"/>
                                         </tree>
                                     </page>
@@ -77,16 +71,17 @@
                 </form>
             </field>
         </record>
-        <record model="ir.ui.view" id="view_tree_procur_good_request_line">
-            <field name="name">Procur Goods Request Line</field>
-            <field name="model">procur.good.requestline</field>
+        <record model="ir.ui.view" id="view_tree_procur_good_return_line">
+            <field name="name">Procur Goods Return Line</field>
+            <field name="model">procur.good.returnline</field>
             <field name="arch" type="xml">
-                <tree string="Procurment Good Request Tree" editable='bottom' delete="true">
-                    <field name="owner_id"  invisible="1" readonly="1"/>
+                <tree string="Procurment Goods Return Tree" editable='bottom' delete="true">
+                    <field name="return_id"  invisible="1" readonly="1"/>
+                    <field name="code_product" string="Product Code"/>
                     <field name="product_id" string="Product" options="{'no_create_edit': True}"/>
                     <field name="uom_id" string="UOM" options="{'no_create_edit': True}"/>
-                    <field name="qty" string="QTY Request"/>
-                    <field name="qty_done" string="QTY Actual" readonly="1"/>
+                    <field name="request_id" string="BPB" options="{'no_create_edit': True}"/>
+                    <field name="product_qty" string="Qty Return"/>
                     <field name="code" string="COA"/>
                     <field name="block_id" string="Block" options="{'no_create_edit': True}"/>
                     <field name="planted_year_id" string="TT" options="{'no_create_edit': True}"/>
@@ -95,28 +90,28 @@
             </field>
         </record>
 
-         <record id="action_good_request_reject" model="ir.actions.act_window">
-            <field name="name">Reject Goods Request</field>
+        <record id="action_good_return_reject" model="ir.actions.act_window">
+            <field name="name">Reject Good Return</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">estate_procurement.good.request.reject</field>
+            <field name="res_model">estate_procurement.good.return.reject</field>
             <field name="view_type">form</field>
             <field name="view_mode">form</field>
             <field name="target">new</field>
         </record>
 
-        <record model="ir.actions.act_window" id="procur_good_request_action">
-            <field name="name">Goods Request</field>
+        <record model="ir.actions.act_window" id="procur_good_return_action">
+            <field name="name">Goods Return</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">procur.good.request</field>
+            <field name="res_model">procur.good.return</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
             <field name="context">{"search_default_requested_by":uid}</field>
             <!--<field name="search_view_id" ref="view_purchase_request_search"/>-->
             <field name="help" type="html">
               <p class="oe_view_nocontent_create">
-                Click to start a new procurement good request process.
+                Click to start a new procurement good return process.
               </p><p>
-                A procurement  request is an instruction to Procument  to warehouse
+                A procurement  return is an instruction to Procument  to warehouse
                 a certain quantity of materials services, so that they are
                 available at a certain point in time.
               </p>
@@ -124,10 +119,10 @@
         </record>
 
         <menuitem
-            id="menu_procur_request_act"
+            id="menu_procur_return_act"
             sequence="11"
             parent="purchase_request.menu_purchase_request"
-            action="procur_good_request_action"
+            action="procur_good_return_action"
             />
     </data>
 </openerp>
