[FIX] hr_indonesia: employee identity number did not follow policy.
* Recoding identity number format.
* Autogenerated at create record.
* Update record did not display alert (overriding write cannot show warning).
* Create unittest to check identity number creation case
* Fix autoreset sequence for empty prefix
* Remove base_geoengine depedency. It created error when admin editing view.
* Labour usage requiredd wage component display to cross-check

--- a/estate/views/estate_upkeep.xml
+++ b/estate/views/estate_upkeep.xml
@@ -513,11 +513,9 @@
                     <field name="ratio_quantity_day" digits="(8,2)" string="Q/D"/>
                     <field name="ratio_day_quantity" digits="(8,2)" string="D/Q"/>
                     <field name="ratio_wage_quantity" digits="(12,2)" string="W/Q"/>
-                    <!-- remove to shorten tree
-                    <field name="wage_number_of_day" string="W_HK" groups="base.group_hr_manager,estate.group_assistant"/>
-                    <field name="wage_overtime" string="W_OT" groups="base.group_hr_manager,estate.group_assistant"/>
-                    <field name="wage_piece_rate" string="W_PR" groups="base.group_hr_manager,estate.group_assistant"/>
-                    -->
+                    <field name="wage_number_of_day" string="Daily Wage" groups="base.group_hr_manager,estate.group_assistant"/>
+                    <field name="wage_overtime" string="OT Wage" groups="base.group_hr_manager,estate.group_assistant"/>
+                    <field name="wage_piece_rate" string="PR Wage" groups="base.group_hr_manager,estate.group_assistant"/>
                     <field name="amount" string="Wage" sum="Wage"/>
                     <field name="prod_quantity_day" string="Prod (%)" avg="Productivity"/>
                     <field name="state" invisible="True"/>
