--- a/hr_indonesia/views/hr_indonesia_view.xml
+++ b/hr_indonesia/views/hr_indonesia_view.xml
@@ -8,10 +8,12 @@
             <field name="inherit_id" ref="hr.view_employee_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//sheet" position="before">
-                    <header>
-                        <button class="oe_highlight" name="button_generate_nik" string="Generate NIK"
-                                type="object" groups="base.group_hr_user"/>
-                    </header>
+                    <!-- NIK generated while create new employee and when there is contract chages -->
+                    <!--<header>-->
+                        <!--<button class="oe_highlight" name="button_generate_nik" string="Generate NIK"-->
+                                <!--type="object" groups="base.group_hr_user"/>-->
+                    <!--</header>-->
+                    <!---->
                 </xpath>
                 <xpath expr="//notebook" position="inside">
                     <page string="HR Indonesia" groups="base.group_hr_user">
